--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,16 +18,15 @@ jobs:
           base: header, community, repositories, metadata
           config_timezone: UTC
           
-          # This is the "Safe" version to ensure it passes quickly
+          # Language Plugin Configuration
           plugin_languages: yes
+          plugin_languages_indepth: yes # Deeper analysis of commits
+          plugin_languages_sections: most-used # Ensures the chart renders
           plugin_languages_details: percentage
           plugin_languages_limit: 8
-       
-          plugin_languages_ignored: html, css, tex # Optional: ignore common filler languages
-          plugin_languages_indepth: yes    # This performs a deeper analysis
+          plugin_languages_ignored: html, css, tex, xml # Added xml as it's common in Android layouts
           
-          # Achievements is currently buggy on GitHub's side, 
-          # so we'll leave it off for the first successful run.
+          # Keep these off for now to ensure stability
           plugin_achievements: no
           plugin_habits: no 
 
