fix: resolve the warning Unexpected input(s) 'config_theme'

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,4 +31,5 @@ jobs:
           plugin_habits: no 
 
           # Styling
-          config_theme: radical
+          env:
+          CONFIG_THEME: radical
