--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 name: Metrics
 on:
-  schedule: [{cron: "0 0 * * *"}]
+  schedule: [{ cron: "0 0 * * *" }]
   workflow_dispatch:
-  push: {branches: ["master", "main"]}
+  push: { branches: ["master", "main"] }
 
 jobs:
   github-metrics:
@@ -17,19 +17,32 @@ jobs:
           template: classic
           base: header, community, repositories, metadata
           config_timezone: UTC
-          
-          # Language Plugin Configuration
+          config_theme: radical
+
+          # 1. Languages (In-depth analysis)
           plugin_languages: yes
-          plugin_languages_indepth: yes # Deeper analysis of commits
-          plugin_languages_sections: most-used # Ensures the chart renders
+          plugin_languages_indepth: yes
+          plugin_languages_sections: most-used
           plugin_languages_details: percentage
           plugin_languages_limit: 8
-          plugin_languages_ignored: html, css, tex, xml # Added xml as it's common in Android layouts
-          
-          # Keep these off for now to ensure stability
-          plugin_achievements: no
-          plugin_habits: no 
+          plugin_languages_ignored: html, css, tex, xml
 
-          # Styling
-          env:
-          CONFIG_THEME: radical
+          # 2. Commit Graph (3D Isometric Calendar)
+          plugin_isocalendar: yes
+          # Recent 3D Visual (Last 6 months)
+          plugin_isocalendar: yes
+          plugin_isocalendar_duration: half-year 
+          
+          # Long-term History (Last 5 years)
+          plugin_calendar: yes
+          plugin_calendar_limit: 5
+
+          # 3. Project List
+          plugin_projects: yes
+          plugin_projects_limit: 4 # Shows your 4 most recent projects
+          plugin_projects_descriptions: yes
+
+          # 4. Optional: Achievements (Re-enabling now that we have write perms)
+          plugin_achievements: yes
+          plugin_achievements_display: compact
+          plugin_achievements_threshold: C # Only show major achievements
