--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,4 @@ jobs:
 
           # 2. Standard 5-Year History Calendar (Non-3D)
           plugin_calendar: yes
-          plugin_calendar_limit: 3
+          # plugin_calendar_limit: 3
