remove History Calendar

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,6 @@ jobs:
           plugin_languages_limit: 8
           plugin_languages_ignored: html, css, tex, xml, json
 
-          # 2. Standard 5-Year History Calendar (Non-3D)
-          plugin_calendar: yes
+          # 2. Standard 3-Year History Calendar (Non-3D)
+          # plugin_calendar: yes
           # plugin_calendar_limit: 3
